webook/k8s-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-live
  labels:
    app: webook-live
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webook-live
  template:
    metadata:
      name: webook-live
      labels:
        app: webook-live
    spec:
      containers:
        - name: webook-live
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
          volumeMounts:  # 持久化卷
            #              这边要对应到 mysql 的数据存储的位置
            - mountPath: /var/lib/mysql
              #              我 POD 里面有那么多 volumes，我要用哪个
              name: mysql-storage
      #        - name: webook-live-hadoop
          ports:
            - containerPort: 3306
      restartPolicy: Always
      #       我整个 POD 有哪些
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: webook-live-mysql-claim
#        - name: hadoop-storage
#          persistentVolumeClaim:
#            claimName: webook-hadoop-claim
