webook/k8s-webook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: # 名称
  name: webook
# specification
spec: # 规格说明
  # 副本数量
  replicas: 3
  selector:
    matchLabels:
      app: webook
  #       template 描述的是你的 POD 是什么样的
  template:
    metadata:
      name: webook
      labels:
        app: webook
    #       POD 的具体信息
    spec:
      containers:
        - name: webook
          image: flycash/webook:v0.0.1
          ports:
            - containerPort: 9090 # 注意与 web_url 的端口一致
