webook/k8s-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-live
spec:
  selector:
    app: webook-live
  ports:
    - protocol: TCP
      #       你访问的端口
      port: 11313
      #       映射到 pod 的端口
      targetPort: 3306
      nodePort: 30001
  type: LoadBalancer
