webook/k8s-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-live-redis
spec:
  selector:
    app: webook-live-redis
  ports:
    - protocol: TCP
      port: 11479
      #        Redis 默认端口
      targetPort: 6379
      #        内外部访问端口，有了这个 port 作为外部访问端口就无效了
      nodePort: 30003
  type: NodePort
